# Rest_full_Crud_In_Rust

./: Cargo.toml  README.md
src/: database.rs  handlers.rs  main.rs  routes.rs
