[package]
name = "crud-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0", features = ["derive"] }
